actually fix overflow bug now

--- a/src/routes/NotFound/NotFound.scss
+++ b/src/routes/NotFound/NotFound.scss
@@ -9,6 +9,10 @@
   //  background: $color-grooming-green;
 }
 
+.not-found__background {
+  position: relative;
+}
+
 .not-found__background-form {
   position: absolute;
 }
